# awb

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  LEGAL.md  LICENSE.MIT.md  README.md  rustfmt.toml
lang/: en_US.yaml  es_419.yaml
src/: main.rs
src/commands/: general.rs  mod.rs  purge.rs  quote.rs  settings.rs  shadowbox.rs
src/db/: guild_settings.rs  mod.rs  quotebook.rs  user_settings.rs
src/localization/: language.rs  mod.rs  translation_key.rs
src/settings/: context.rs  guild.rs  mod.rs  user.rs
src/utils/: chunked_messages.rs  expect_log.rs  mod.rs
