[package]
name = "awb"
version = "2.0.0-alpha"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.99"
async-recursion = "1.1.1"
dashmap = "6.1.0"
poise = "0.6.1"
serde_yaml = "0.9.34"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = "0.3.19"

[dependencies.sea-orm]
version = "1.1.14"
features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
]
default-features = false

[dependencies.serenity]
version = "0.12.4"
features = [
    "builder",
    "client",
    "gateway",
    "model",
    "utils",
    "collector",
    "framework",
]

[dependencies.tokio]
version = "1.47.1"
features = ["fs", "io-std", "rt-multi-thread"]
